inventory module made responsive.  Product list component made responsive. Product create/edit/details modules half refactored to be fully functional. Tweaked