@@ -1,25 +1,27 @@
 package com.IntegrityTechnologies.business_manager.modules.stock.product.parent.mapper;
 
+import com.IntegrityTechnologies.business_manager.modules.person.entity.supplier.dto.SupplierMinimalDTO;
+import com.IntegrityTechnologies.business_manager.modules.person.entity.supplier.model.Supplier;
+import com.IntegrityTechnologies.business_manager.modules.person.entity.user.mapper.UserMapper;
 import com.IntegrityTechnologies.business_manager.modules.stock.product.parent.dto.ProductCreateDTO;
 import com.IntegrityTechnologies.business_manager.modules.stock.product.parent.dto.ProductDTO;
 import com.IntegrityTechnologies.business_manager.modules.stock.product.parent.dto.ProductUpdateDTO;
 import com.IntegrityTechnologies.business_manager.modules.stock.product.parent.model.Product;
 import com.IntegrityTechnologies.business_manager.modules.stock.product.parent.model.ProductImage;
-import com.IntegrityTechnologies.business_manager.modules.person.entity.supplier.dto.SupplierMinimalDTO;
-import com.IntegrityTechnologies.business_manager.modules.person.entity.supplier.model.Supplier;
-import com.IntegrityTechnologies.business_manager.modules.person.entity.user.mapper.UserMapper;
-import org.mapstruct.*;
 import com.IntegrityTechnologies.business_manager.modules.stock.product.variant.dto.ProductVariantDTO;
 import com.IntegrityTechnologies.business_manager.modules.stock.product.variant.model.ProductVariant;
+import org.mapstruct.*;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring", uses = {UserMapper.class})
 public interface ProductMapper {
 
-    // --- ENTITY → DTO ---
+    /* =============================
+       ENTITY → DTO
+       ============================= */
+
     @Mapping(target = "categoryId",
             expression = "java(product.getCategory() != null ? product.getCategory().getId() : null)")
     @Mapping(target = "categoryName",
@@ -33,16 +35,24 @@ public interface ProductMapper {
     @Mapping(target = "minimumPercentageProfit", source = "minimumPercentageProfit")
     ProductDTO toDTO(Product product);
 
-    // --- DTO → ENTITY ---
+
+    /* =============================
+       DTO → ENTITY
+       ============================= */
+
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "category", ignore = true)
     @Mapping(target = "suppliers", ignore = true)
-    @Mapping(target = "images", ignore = true) // handled manually in service
+    @Mapping(target = "images", ignore = true)
     @Mapping(target = "variants", ignore = true)
     @Mapping(target = "minimumPercentageProfit", source = "minimumPercentageProfit")
     Product toEntity(ProductCreateDTO dto);
 
-    // --- Partial update ---
+
+    /* =============================
+       PARTIAL UPDATE
+       ============================= */
+
     @Mapping(target = "images", ignore = true)
     @Mapping(target = "category", ignore = true)
     @Mapping(target = "createdAt", ignore = true)
@@ -51,23 +61,34 @@ public interface ProductMapper {
     @BeanMapping(nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
     Product applyUpdate(@MappingTarget Product existing, ProductUpdateDTO dto);
 
-    // --- Helper methods ---
     default List<String> mapImagesToUrls(List<ProductImage> images) {
         if (images == null || images.isEmpty()) return List.of();
+
         return images.stream()
+                .filter(img -> !Boolean.TRUE.equals(img.getDeleted()))
                 .map(ProductImage::getFilePath)
-                .collect(Collectors.toList());
+                .toList();
     }
+    /* =========================================================
+       SUPPLIERS
+       ========================================================= */
 
     default List<SupplierMinimalDTO> mapSuppliersMinimal(Set<Supplier> suppliers) {
         if (suppliers == null || suppliers.isEmpty()) return List.of();
+
         return suppliers.stream()
                 .map(s -> new SupplierMinimalDTO(s.getId(), s.getName()))
                 .toList();
     }
 
+
+    /* =========================================================
+       VARIANTS
+       ========================================================= */
+
     default List<ProductVariantDTO> mapVariants(List<ProductVariant> variants) {
         if (variants == null || variants.isEmpty()) return List.of();
+
         return variants.stream()
                 .map(v -> ProductVariantDTO.builder()
                         .id(v.getId())
@@ -81,5 +102,4 @@ public interface ProductMapper {
                 )
                 .toList();
     }
-
 }
